Add Epic test